--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
             <div class="col-2">
-                <img src="images/image-header-mobile.jpg">
+                <img src=".images/image-header-mobile.jpg">
             </div>
     </div>
 </body>
